--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+
 .App {
-  text-align: center;
+  width : 100%;
+  max-width : 500px;
+  margin : 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.Topbar {
+  width : 100%;
+  height : 60px;
+  padding : 8px 16px 0 16px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display : flex;
+  justify-content : space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.prev_icon{
+  font-size : 1.375rem;
+  cursor : pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top-title {
+  /* 22px */
+  font-size : 1.375rem;
+}
+
+.top-my_icon {
+  background-color: #863CFF;
+  border-radius: 50%;
+  width : 40px;
+  height : 40px;
+  text-align : center;
+  font-weight : bold;
+  line-height : 40px;
+  cursor : pointer;
 }
