--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-size : 16px;
+  line-height : 1;
+  color : #fff;
+  background-color : #181818;
+
+  font-family: -apple-system,
+  BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y : hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin : 0;
+  padding : 0;
+  box-sizing : border-box;
+}
+
+ol, ul, li {
+  list-style : none;
+}
+
+a{
+  color : #bababa;
+  text-decoration : none;
+  cursor : pointer;
+}
+
+a:hover{
+  color : #fff;
+}
+
+a.on {
+  color : #fff;
+  font-weight : bold;
+}
+
+
+
+/* 스크롤바 전체 */
+::-webkit-scrollbar {
+  display : none;
+  /* width : 0px; */
+}
+
+/* 스크롤 바 내용 스타일링 */
+::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 10px;
+}
+
+/* 스크롤바 배경 스타일링 */
+::-webkit-scrollbar-track {
+  background: #181818;
 }
